fix: fix typo error

--- a/src/mail/templates/booking-request.hbs
+++ b/src/mail/templates/booking-request.hbs
@@ -40,10 +40,10 @@
                 <strong>Approx. Budget:</strong> {{budget}}
             </div>
             <div class="field">
-                <strong>Heard About Us:</strong> {{hearAbout}}
+                <strong>How did you hear about us?</strong> {{hearAbout}}
             </div>
             <div class="field">
-                <strong>Event Types:</strong> {{eventType}}
+                <strong>Event Session:</strong> {{eventType}}
             </div>
             <div class="field">
                 <strong>Message:</strong><br>
