all endpoint fix

--- a/src/mail/templates/booking-request.hbs
+++ b/src/mail/templates/booking-request.hbs
@@ -34,16 +34,19 @@
                 <strong>Location:</strong> {{location}}
             </div>
             <div class="field">
-                <strong>Proposed Date(s):</strong> {{proposedDate}}
+                <strong>Event Date:</strong> {{eventDate}}
+            </div>
+            <div class="field">
+                <strong>Duration:</strong> {{duration}}
             </div>
             <div class="field">
                 <strong>Approx. Budget:</strong> {{budget}}
             </div>
             <div class="field">
-                <strong>How did you hear about us?</strong> {{hearAbout}}
+                <strong>Event Type:</strong> {{eventType}}
             </div>
             <div class="field">
-                <strong>Event Session:</strong> {{eventType}}
+                <strong>Services:</strong> {{services}}
             </div>
             <div class="field">
                 <strong>Message:</strong><br>
