--- a/Frontend/src/fonts.css
+++ b/Frontend/src/fonts.css
@@ -1,7 +1,97 @@
-@font-face {
+/* @font-face {
   font-family: "Eras Demi ITC";
   src: url("/fonts/ErasITC-Demi.woff2") format("woff2"),
     url("/fonts/ErasITC-Demi.woff") format("woff");
   font-weight: normal;
   font-style: normal;
+} */
+
+@font-face {
+  font-family: "Brandon Grotesque";
+  src: url("/fonts/HvDTrial_Brandon_Grotesque_light-BF64a625c93e709.otf")
+    format("opentype");
+  font-weight: 300; /* Light */
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Brandon Grotesque";
+  src: url("/fonts/HvDTrial_Brandon_Grotesque_light_italic-BF64a625c93ac64.otf")
+    format("opentype");
+  font-weight: 300; /* Light */
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Brandon Grotesque";
+  src: url("/fonts/HvDTrial_Brandon_Grotesque_regular-BF64a625c9311e1.otf")
+    format("opentype");
+  font-weight: 400; /* Regular */
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Brandon Grotesque";
+  src: url("/fonts/HvDTrial_Brandon_Grotesque_regular_italic-BF64a625c94445e.otf")
+    format("opentype");
+  font-weight: 400; /* Regular */
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Brandon Grotesque";
+  src: url("/fonts/HvDTrial_Brandon_Grotesque_medium-BF64a625c84a521.otf")
+    format("opentype");
+  font-weight: 500; /* Medium */
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Brandon Grotesque";
+  src: url("/fonts/HvDTrial_Brandon_Grotesque_medium_italic-BF64a625c928c55.otf")
+    format("opentype");
+  font-weight: 500; /* Medium */
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Brandon Grotesque";
+  src: url("/fonts/HvDTrial_Brandon_Grotesque_bold-BF64a625c9151d5.otf")
+    format("opentype");
+  font-weight: 700; /* Bold */
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Brandon Grotesque";
+  src: url("/fonts/HvDTrial_Brandon_Grotesque_bold_italic-BF64a625c93b0ce.otf")
+    format("opentype");
+  font-weight: 700; /* Bold */
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Brandon Grotesque";
+  src: url("/fonts/HvDTrial_Brandon_Grotesque_black-BF64a625c944b08.otf")
+    format("opentype");
+  font-weight: 900; /* Black */
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Brandon Grotesque";
+  src: url("/fonts/HvDTrial_Brandon_Grotesque_black_italic-BF64a625c93406c.otf")
+    format("opentype");
+  font-weight: 900; /* Black */
+  font-style: italic;
+  font-display: swap;
 }
